# low-margins

./: .gitignore  CODEC_TRANSMISSION.md  COMPOSITE_CAMERA.md  QUICKSTART.md  README.md  README_CODEC_TEST.md  README_camera_communicator.md  camera.py  camera_communicator.py  camera_info.py  camera_test.py  client.py  codec.py  codec_composite_camera.py  color_utils.py  composite_camera.py  config.py  decoder.py  encoder.py  firebase.py  model_exporter.py  model_weights.pth  network.py  pyproject.toml  receiver.py  requirements.txt  state.py  state_network.py  state_network_camera.py  tensor_link.py  test.py  test_bfloat16_camera.py  test_codec_camera.py  test_codec_composite.py  test_codec_quick.py  test_codec_transmission.py  test_comm_comparison.py  test_composite.py  test_encoder.py  test_integration.py  (+10 more)
scratch/: BARCODE_README.md  barcode_decode.py  barcode_encode.py  decode.py  display.py  encode.py  test_barcode.py
simon_test/: README_clock_test.md  README_distributed_training.md  README_enhanced_validation.md  README_tensor_verification.md  clock_test_root.py  clock_test_root_enhanced.py  clock_test_worker.py  clock_test_worker_enhanced.py  distributed_root.py  distributed_utils.py  distributed_worker.py  generate_test_data.py  harness.py  old_harness.py  receive_harness.py  tensor_verification_fixed.py  tensor_verification_test.py  test_codec_conversion.py  test_data.json  test_distributed_conversion.py  test_tensor_roundtrip.py  test_utils.py  test_validation_difference.py  transmit_harness.py
src/video_tunnel/: __init__.py  __main__.py  stream_receiver.py  stream_sender.py  tunnel.py  video_decoder.py  video_encoder.py
train/: model.py  worker.py
website/: package.json  pnpm-lock.yaml
(+26 files in other folders)
