[project]
name = "video-tunnel"
version = "0.1.0"
description = "Encode and transmit data as video over local networks"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
]

[project.scripts]
video-tunnel = "video_tunnel.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/video_tunnel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
