[project]
name = "no-margin-vis"
version = "1.0.0"
description = "Optical data transmission via color grid - transmit text between two computers using camera and display"
authors = [{name = "Creator"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.1.78",
    "flask>=3.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["client", "color_utils", "config", "decoder", "encoder", "receiver", "transmitter", "test"]

[tool.uv]
dev-dependencies = []
